2010-03-05  Christoph Junghans (ottxor)

	* src/Makefile.am:  Fix broken target "make clean"

2010-03-04  Ethan A Merritt  <merritt@u.washington.edu>

	* share/LaTeX/Makefile.am: Add gnuplot.cfg to EXTRA_DIST

	* share/Makefile.am INSTALL NEWS:  Give up on figuring out where
	an x11 app-defaults files should be installed.  Place ours in 
	${PREFIX}/share/gnuplot/4.4/app-defaults and put a note in INSTALL
	that it should be copied to an appropriate system directory.

2010-03-04  Thomas Sefzick <thse@users.sourceforge.net>

	* src/svg.trm:  Make sure to reset ENHsvg_string_state after each use.

2010-03-03  Ethan A Merritt  <merritt@u.washington.edu>

	* term/pdf.trm:  Remove requirement that the 'size' option must be the
	last option given.

2010-02-27  Ethan A Merritt  <merritt@u.washington.edu>

	* graph3d.c (check_for_variable_color) plot3d.c (get_3ddata)
	plot3d.c (plot3d_impulses plot3d_lines plot3d_points):
	The presence of variable color was being tracked by a shared variable,
	rgb_from_column, but it was not being updated in some circumstances.
	Get rid of the variable and test the plot header directly when needed.

	* docs/gnuplot.texi: Sync to current docs

	* term/emf.trm:  Tweak empirical corrections for character widths.
	Additional thin character -, really thin chars i,.:;|!

2010-02-24  Peter Juhasz

	* src/save.c:  The 'save' command was not correctly handling plot styles
	circles, image, or rgbimage.
	Bug #2958235

2010-02-24  Alexander Taschner  <tachna@users.sourceforge.net>

	* src/command.c src/win/wgraph.c term/win.trm:  Move declarations to
	conform with ANSI C.   Do not call non-existent term->wait_for_input().

2010-02-24  Ethan A Merritt  <merritt@u.washington.edu>

	* term/cgm.trm (find_nearest_color):  When looking for RGB colors, check
	both the user-loaded colors and the default set of colors.  Otherwise 
	RGB fails if the user has loaded no colors.

	* term/gd.trm:  Documentation for the mechanism for setting line colors